TODO
* updated msvscpp files - add libcaes
* libcaes
  - add support for MS Crypto API implementation - add GetError
  - WinXP no AES support ?
* check metadata number_of_volume_header_sectors ?
* add password support (partial)
* debug print more volume header info

Optimizations
* pass values 32-bit to aes

Library
* add password support

Test suite:
* add test scripts

Release:
* check debug output alignment
* automated tests - test suite
* msvscpp build
* check TODOs

Tools:
* bdeinfo
* bdeexport
* bdemount
  - implement ImDisk version for WINAPI
  - implement native MacOS-X version

Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

Test images:
* for Windows Vista, Windows 7, To Go

Validate test cases:
* AES 128
* AES 128 diffuser
* AES 256
* AES 256 diffuser
* recovery key
* clear key
* partial encrypted volume
* startup key

20110921
* preparations for release
* updated libbfio - added support for device file size
* updated libhmac

20110918
* preparations for release

20110830
* worked on support for startup key

20110829
* worked on support for startup key
* updated configure

20110828
* updated libbfio

20110826
* worked on support for partial encrypted volumes

20110825
* worked on clear key support
* worked on support for partial encrypted volumes

20110824
* worked on Vista support

20110823
* updated libbfio, libfvalue

20110822
* remove seek end volume size detection to rely on metadata
* small changes to configure for fuse

20110821
* worked on handling metadata blocks
  - fix for BitLocker To Go
* fix for openssl EVP
* updated libhmac
* code clean up
* added codepage
* bdemount now daemonizes
* improved libfuse detection by configure
* worked on manuals
* open now distinguishes between failure and invalid keys
* the library no longer stores the binary recovery key but its SHA256 hash
* worked on password support